--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.0",
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.1.2",
     "popper.js": "^1.15.0",
