--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "util.js": "0.0.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
